# tsq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cost_accounting.md  evals.md  fine_tuning_plan.md  lora_finetune.md  model_eval.md  reports.md  training.md  training_data.md  transformers_backend.md  v09_experiment.md
examples/experiments/: v09_dry_run_manifest.json  v09_dry_run_summary.md
examples/reports/: eval_suite_report.json  mock_eval_report.json  mock_generate_report.json  repair_eval_report.json
scripts/: check_training_env.py  eval_lora.py  run_v09_experiment.py  summarize_experiment.py  train_lora.py
tests/: test_tsq_v01.py
tsq/: __init__.py  cli.py  reports.py
tsq/evals/: harness.py  tasks.py
tsq/receipts/: schema.py  store.py
tsq/runtime/: costing.py  generation_loop.py  model_runner.py  precision_router.py
tsq/tension/: scanner.py
tsq/training/: __init__.py  dataset_builder.py  experiment.py  schema.py  validate_dataset.py
tsq/verifier/: base.py
