[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsq"
version = "0.4.0"
description = "Tension-Structured Quantization: Verifier-Gated Inference Runtime for Thinking System (TS)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "BoggersTheFish", email = "ben@boggersthefish.com"}
]
dependencies = [
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
transformers = ["torch", "transformers"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
